syntax = "proto3";

package david;

option java_multiple_files = true;
option java_package="org.david.grpc";
option java_outer_classname="data";

service DataService{
  rpc SaveInventory(SaveInventoryRequest) returns (SaveInventoryResponse){}
}

message SaveInventoryRequest{
  string itemName=1;
  int32 itemQuantity=2;
}
message SaveInventoryResponse{}
